--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo2
 #??web?? ??8080
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/userinfo?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/knowledge_planet?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=@Cwt2005
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,3 +17,8 @@ mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 logging.level.com.example1.demo2.mapper=debug
+# ?????ID??????
+logging.level.com.example1.demo2.util.PlanetIdGeneratorUtil=INFO
+
+# ?????????? Hibernate ??
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
