加入了知识星系数据库

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=demo2
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/knowledge_planet?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=@Cwt2005
+spring.datasource.password=050408Zhyj
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
