--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo2
 #??web?? ??8080
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/knowledge_planet?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://118.24.140.180:3306/problemsolve?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=@Cwt2005
+spring.datasource.password=66404d61a1e61fe6
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
